# tyust

./: .gitignore  INTEGRATION_SUMMARY.md  LICENSE  QUICK_START.md
.claude/: settings.local.json
tyust_backend/: .env  .env.example  CHANGES_RAW_SCORES.md  Cargo.toml  config.json  test_db.rs
tyust_backend/src/: admin_handlers.rs  api_types.rs  auth.rs  db.rs  de_crypto.rs  entity.rs  handlers.rs  http_helper.rs  main.rs  tyust_api.rs
tyust_backend_admin/: README.md  package-lock.json  package.json
tyust_backend_admin/src/: App.vue  main.ts
tyust_backend_admin/src/api/: admin.ts
tyust_backend_admin/src/assets/: main.css
tyust_backend_admin/src/router/: index.ts
tyust_backend_admin/src/stores/: admin.ts
tyust_backend_admin/src/utils/: request.ts
tyust_backend_admin/src/views/: Dashboard.vue  Layout.vue  Login.vue  Profile.vue  Semester.vue  Students.vue
tyust_frontend/: CHECKLIST.md  RAW_SCORES_INTEGRATION.md  README.md  TOKEN_AUTH_GUIDE.md  TOKEN_AUTH_README.md  TOKEN_FILES_STRUCTURE.md  TOKEN_IMPLEMENTATION_SUMMARY.md  TOKEN_QUICK_START.md  TOKEN_TEST_GUIDE.md  app.json  config.js  package-lock.json  project.config.json
tyust_frontend/api/: main.js
tyust_frontend/pages/course/: index.js  index.wxml  index.wxss
tyust_frontend/pages/course-detail/: index.js  index.wxml  index.wxss
tyust_frontend/pages/gpa-calculator/: index.js  index.json  index.wxml  index.wxss
tyust_frontend/pages/index/: index.js  index.wxml  index.wxss
tyust_frontend/pages/login/: index.js  (+2 more)
tyust_frontend/utils/: auth.js  pageAuth.js  request.js  tools.wxs  util.js
(+7 files in other folders)
