[package]
name = "tyust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = { version = "0.8.4", features = ["macros"] }
base64 = "0.22.1"
block-modes = "0.9.1"
block-padding = "0.3.3"
des = "0.8.1"
md5 = "0.8.0"
rand = "0.9.2"
regex = "1.11.1"
reqwest = {version = "0.12.23",features = ["json", "blocking", "cookies"]}
serde = {version = "1.0.219",features = ["derive"]}
serde_json = "1.0.143"
tokio = {version = "1.47.1",features = ["rt-multi-thread","macros","net"]}
url = "2.5.4"
jsonwebtoken = "9.2.0"
chrono = { version = "0.4.31", features = ["serde"] }
once_cell = "1.19.0"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors", "fs"] }
lazy_static = "1.4.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
dotenv = "0.15"
bcrypt = "0.17.1"
uuid = { version = "1.0", features = ["v4"] }

[[bin]]
name = "tyust"
path = "src/main.rs"

[[bin]]
name = "test_db"
path = "test_db.rs"